Bug 421295 - Safari home page import failed. patch from Michael Schonfeld <dev@schonfeld.org>, r=me.